--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "cpu-scheduling-simulator",
   "version": "0.1.0",
+  "homepage": "https://jtlavigne.github.io/cpu-scheduler",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "chart.js": "^4.4.8",
@@ -14,6 +17,7 @@
     "jspdf": "^3.0.0",
     "next": "15.2.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
