--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.8",
     "gh-pages": "^6.3.0",
     "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
