--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chart.js": "^4.4.8",
     "gh-pages": "^6.3.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
     "next": "15.2.2",
