--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "export": "next build && next export",
+    "deploy": "npm run export && gh-pages -d out"
+},
   },
   "dependencies": {
     "chart.js": "^4.4.8",
-    "gh-pages": "^6.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4"
   }
 }
