--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "homepage": "https://jtlavigne.github.io/cpu-scheduler",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "export": "next build && next export",
-    "deploy": "npm run export && gh-pages -d out"
-},
+    "deploy": "next build && echo.> out\\.nojekyll && gh-pages -d out -b gh-pages"
   },
   "dependencies": {
     "chart.js": "^4.4.8",
