--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "homepage": "https://jtlavigne.github.io/cpu-scheduler",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "deploy": "next build && echo.> out\\.nojekyll && gh-pages -d out -b gh-pages"
+  "dev": "next dev",
+  "build": "next build",
+  "deploy": "next build && copyfiles -f .nojekyll out && gh-pages -d out -b gh-pages"
   },
   "dependencies": {
     "chart.js": "^4.4.8",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "copyfiles": "^2.4.1",
     "gh-pages": "^6.3.0",
     "tailwindcss": "^4"
   }
